--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,5 @@
 body { 
-    background: pink;
+    background: #902135;
     font-family: 'Open Sans', sans-serif; 
 }
 /*scale image to fit screen */
